fix rocket on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2788,7 +2788,7 @@ body._active {
     }
 
     .features-wraper__img:nth-child(1)._active {
-        top: 134px;
+        top: 186px;
         left: -20px;
     }
 
